...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_headline"
        tools:text="Team Name"/>

    <TextView
        android:id="@+id/txt_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/add_to_favorite"
        android:textColor="@color/accent"
...
